--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,6 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Get Tem1 Value
+      run: sudo apt-get install -y jq
       run: |
         curl https://v0.yiketianqi.com/api?unescape=1&version=v61&appid=62128999&appsecret=5wb6X6d6&cityid=101250101 | jq '.tem1'
